# strongerfox-assets

./: README.md
fonts/: .gitignore  Makefile  README.md  pyproject.toml
fonts/ruth-calligraph-font/: info.txt
fonts/short-baby-font/: info.txt
icons/: README.md  icons.yml  process.py  pyproject.toml
logo/: README.md
